kubernetes/service.yml
apiVersion: v1
kind: Service
metadata:
  name: web-api
spec:
  ports:
  - port: 8080
    targetPort: 8080
  selector:
    app: api
  type: LoadBalancer
---
apiVersion: v1
kind: Service
metadata:
  name: website
spec:
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: website
  type: LoadBalancer
